# genh5

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  deployment.pri  genh5.pro  gt_h5.pro  gth5.pro  settings.pri
.reuse/: dep5
LICENSES/: BSD-3-Clause.txt
cmake/: CodeCoverage.cmake  GTlab.cmake
examples/: conversion_system.md  creating_and_reading_datasets.md  creating_data.md  creating_dataspaces_and_selections.md  creating_dataspaces_selections.md  creating_datatypes.md  file_creation.md  file_handling_and_traversal.md  find_child_nodes.md  reading_and_writing_data.md  referencing_nodes_and_links.md
features/: gitlab_pipeline_local_settings.pri  local_settings.pri  package_template.xml
src/: CMakeLists.txt  genh5.h  genh5_abstractdataset.cpp  genh5_abstractdataset.h  genh5_abtsractdataset.cpp  genh5_abtsractdataset.h  genh5_attribute.cpp  genh5_attribute.h  genh5_bytearray.h  genh5_conversion.h  genh5_data.h  genh5_dataset.cpp  genh5_dataset.h  genh5_datasetcproperties.cpp  genh5_datasetcproperties.h  genh5_dataspace.cpp  genh5_dataspace.h  genh5_datatype.cpp  genh5_datatype.h  genh5_exception.h  genh5_exports.h  genh5_file.cpp  genh5_file.h  genh5_finally.h  genh5_globals.h  genh5_group.cpp  genh5_group.h  genh5_hooks.cpp  genh5_hooks.h  genh5_idcomponent.cpp  genh5_idcomponent.h  genh5_location.cpp  genh5_location.h  genh5_logging.cpp  genh5_logging.h  genh5_mpl.h  genh5_node.cpp  genh5_node.h  genh5_object.cpp  genh5_object.h  (+90 more)
src/cmake/: GenH5-config.cmake.in  GenH5Config.cmake.in  RequireQt.cmake
src/genh5_conversion/: bindings.h  buffer.h  defaults.h  generic.h  type.h
src/genh5_data/: base.h  buffer.h  common.h  common0d.h  comp.h  comp0d.h  fixedstring0d.h  simple.h
src/gth5_conversion/: bindings.h  buffer.h  defaults.h  generic.h  type.h
src/gth5_data/: base.h  comp.h  simple.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/examples/: CMakeLists.txt
tests/examples/valgrind/: CMakeLists.txt  main.cpp
tests/unittests/: CMakeLists.txt  main.cpp  runUnittests.sh  runUnittestsQt512.bat  testhelper.cpp  testhelper.h  unittests.pro
tests/unittests/cmake/: AddGoogleTest.cmake  UseHDF5.cmake
tests/unittests/h5/: test.cpp  test_01_static.cpp  test_01_typedefs.cpp  test_01_version.cpp  test_51_hooks.cpp  test_h5.cpp  test_h5_abstractdataset.cpp  test_h5_attribute.cpp  test_h5_bugs.cpp  test_h5_conversion.cpp  test_h5_data.cpp  test_h5_data0d.cpp  test_h5_data_fixedstring0d.cpp  test_h5_dataset.cpp  test_h5_datasetcproperties.cpp  test_h5_datasetproperties.cpp  test_h5_dataspace.cpp  test_h5_datatype.cpp  test_h5_exception.cpp  test_h5_file.cpp  test_h5_group.cpp  test_h5_iteration.cpp  test_h5_location.cpp  test_h5_node.cpp  test_h5_optional.cpp  test_h5_reference.cpp  test_h5_utils.cpp
